# bachelor-thesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_dict_parser.py  test_json_parser.py  test_kleister_charity_parser.py
uni_kie/: __init__.py  __main__.py  constants.py  dataset_cleaning_and_exploration_dev.ipynb  dataset_exploration.ipynb  dataset_exploration_dev.ipynb  dataset_exploration_train.ipynb  evaluation.ipynb  evaluation_dev.ipynb  flan_t5_deploy.py  kleister_charity_constants.py  kleister_charity_dev_baseline_evaluation.ipynb  kleister_charity_dev_cleaning_and_exploration.ipynb  kleister_charity_dev_evaluation.ipynb  kleister_charity_evaluation_dev.ipynb  kleister_charity_test_baseline_evaluation.ipynb  kleister_charity_test_cleaning_and_exploration.ipynb  kleister_charity_test_evaluation.ipynb  parser.py  pipeline.py  sroie_constants.py  sroie_load_ocr_of_shots.ipynb  sroie_test_exploration.ipynb  sroie_test_exploration_and_evaluation.ipynb  unification_statistics.ipynb  zipper.py
uni_kie/datasets/SROIE/evaluation_folder/: script.py
uni_kie/datasets/SROIE/gold/: X51005230605.txt  X51005230616.txt  X51005230657.txt  X51005268408.txt  X51005337867.txt  X51005433556.txt  X51005442366.txt  X51005444041.txt  X51005444046.txt  (+121 more)
uni_kie/datasets/kleister_charity_test_set/: in-for-testing.tsv
uni_kie/models/: baseline.py  flan_t5.py  gpt.py  model.py  t0pp.py
uni_kie/ocr/: ocr.py  tesseract.py
uni_kie/parsers/: parser.py
uni_kie/pdf_to_text/: pdf_to_text.py
uni_kie/pdf_to_text/ocr/: ocr.py  tesseract.py
uni_kie/prompts/: prompts.py
(+147 files in other folders)
