[tool.poetry]
name = "uni_kie"
version = "0.1.0"
description = "Unimodal language models for KIE."
authors = ["ivo-1 <ivoschaper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.10"
numpy = "^1.23.4"
opencv-python = "^4.6.0"
poppler-utils = "^0.1.0"
pdftotext = "^2.2.2"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
