[tool.poetry]
name = "uni_kie"
version = "0.1.0"
description = "Unimodal language models for KIE."
authors = ["ivo-1 <ivoschaper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.10"
numpy = "^1.23.4"
opencv-python = "^4.6.0"
pdf2image = "^1.16.0"
PyMuPDF = "^1.20.2"
openai = "^0.23.1"
pytest = "^7.1.3"
jupyter = "^1.0.0"
transformers = "^4.24.0"
seaborn = "^0.12.1"
dateparser = "^1.1.3"
spacy = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
